web/app/themes/platformlondon/style.css
/* ... */
@media (min-width: 768px) {
    .platform-strapline em {
        padding-bottom: 0.5rem !important;
        padding-top: 0.5rem !important;
    }
}

.platform-illustration {
  z-index: 10;
    height: calc(100vw - 2rem - 1px);
    margin: -25vw 0;
    position: relative;
    width: calc(100vw - 2rem - 1px);
}

@media screen and (min-width: 782px) {
    .platform-illustration {
        height: 50vw;
        left: 50%;
        margin: 0;
        position: absolute;
        transform: translate(-50%, -50%);
        top: 50%;
        width: 50vw;
    }
}

.platform-illustration svg {
    position: absolute;
    transform: translateY(0);
    transition: all 0.5s ease-in;
}

.platform-illustration #community-svg {
    bottom: 29%;
    left: 0%;
    width: 46%;
}

.platform-illustration #economy-svg {
    bottom: 31%;
    left: 33%;
    width: 58%;
}

.platform-illustration #liberation-svg {
    bottom: 32%;
    left: 28%;
    width: 40%;
}

.platform-illustration #culture-svg {
    bottom: 12%;
    left: 18%;
    width: 40%;
}

.platform-illustration #energy-svg {
    bottom: 18%;
    right: 0%;
    width: 62%;
}

.platform-illustration g {
    opacity: 0;
    transition: all 0.5s ease-in;
}

.platform-illustration g[id$=base] {
    opacity: 1;
}

.platform-strapline hr {
  margin-left: 1rem;
  margin-right: 1rem;
  margin-bottom: 1rem;
}

/* Post Details Footer Block (at the bottom of Single Post page) */

.post-details-footer {
  position: relative;
  margin-bottom: 4rem;
  display: flex;
  flex-direction: column;
}

.post-details-footer__label {
  margin-bottom: 1rem;
  border-top-width: 1px;
  --tw-border-opacity: 1;
  border-color: rgb(24 85 0 / var(--tw-border-opacity));
  text-transform: uppercase;
  padding-top: 10px;
}

.post-details-footer__categories,.post-details-footer__terms {
  margin-bottom: 1rem;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 1rem;
  padding-bottom: 1rem;
}

.post-details-footer__terms {
  padding-left: 1.25rem;
}

.post-details-footer__term {
  margin-right: 1rem;
  list-style-type: disc;
}

.post-details-footer__category {
  display: flex;
  align-items: center;
}

.post-details-footer__category a:hover,.post-details-footer__category a:focus {
    background: none;
}

.post-details-footer__category svg {
  margin-right: 0.5rem;
    height: 2rem;
}

/* Post Details Block (used in Query Loop Post Templates) */

.post-details {
  margin-top: auto;
  display: flex;
  font-size: 0.875rem;
  line-height: 1.25rem;
  text-transform: uppercase;
}

.post-details > * {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.post-details > *:not(:last-child) {
  margin-right: 1rem;
}

.post-details a {
    text-decoration: none;
}

/* Post Filter on Blog/Resources/Projects Page */

.post-filter {
  margin-top: 4rem;
  margin-bottom: 3rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.post-filter__categories {
  margin-bottom: 1rem;
  display: flex;
  flex-wrap: wrap;
}

.post-filter__categories li {
  display: block;
}

.post-filter__categories li:not(:last-child) {
  margin-right: 0.5rem;
}

.post-filter__categories .energy {
  border-width: 0px !important;
  --tw-bg-opacity: 1;
  background-color: rgb(255 168 26 / var(--tw-bg-opacity));
}

.post-filter__categories .community {
  border-width: 0px !important;
  --tw-bg-opacity: 1;
  background-color: rgb(255 239 86 / var(--tw-bg-opacity));
}

.post-filter__categories .culture {
  border-width: 0px !important;
  --tw-bg-opacity: 1;
  background-color: rgb(138 225 103 / var(--tw-bg-opacity));
}

.post-filter__categories .economy {
  border-width: 0px !important;
  --tw-bg-opacity: 1;
  background-color: rgb(122 215 219 / var(--tw-bg-opacity));
}

.post-filter__categories .liberation {
  border-width: 0px !important;
  --tw-bg-opacity: 1;
  background-color: rgb(254 169 190 / var(--tw-bg-opacity));
}

.post-filter__categories .active {
  --tw-bg-opacity: 1 !important;
  background-color: rgb(24 85 0 / var(--tw-bg-opacity)) !important;
  --tw-text-opacity: 1 !important;
  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
}

/* Post Header Block (at the top of Single Post page) */

.post-header {
  margin-bottom: 4rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.post-header h1 {
  margin-top: 1rem !important;
  margin-bottom: 3rem !important;
  text-align: center;
    max-width: 1000px;
}

.post-header__details {
  text-transform: uppercase;
}

.post-header__details > *:not(:last-child) {
  margin-right: 1rem;
}

/* Project Header Block (at the top of Single Project page) */

.project-header {
  margin-bottom: 4rem;
}

.project-header h1 {
  margin-top: 1rem !important;
  margin-bottom: 3rem !important;
  text-align: center;
    max-width: 1000px;
}

.project-header__cover {
  display: flex;
  flex-direction: column;
  align-items: center;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    min-height: 600px;
}

.project-header__cover.project-header__cover--no-image {
    min-height: 0;
}

.project-header__buttons {
  position: relative;
}

.project-header__buttons .btn-default:not(:last-child) {
  margin-right: 0.5rem;
}

/* Website Link Block */

.project-website-link {
  position: absolute;
  display: none;
  padding-right: 2rem !important;
  font-size: 1.125rem;
  line-height: 1.75rem;
}

@media (min-width: 768px) {

  .project-website-link {
    display: inline-block;
  }
}

.project-website-link {
    left: 100%;
    transform: rotate(-15deg);
    top: -4rem;
}

.project-website-link::after {
  position: absolute;
    content: "\2191";
    right: 0.75rem;
    top: 0.4rem;
    transform: rotate(45deg);
}

/* Projects Carousel */

.projects-carousel {
  position: relative;
    --card-width: 320px;
}

@media (min-width: 768px) {
    .projects-carousel {
        --card-width: 440px;
    }
}

@media (min-width: 1024px) {
    .projects-carousel {
        --card-width: 560px;
    }
}
/* ... */

